third_party/move/move-compiler-v2/tests/more-v1/translated_ir_tests/move/commands/else_moves_if_doesnt.exp

Diagnostics:
error: cannot move local `x` since it is still in use
  ┌─ tests/more-v1/translated_ir_tests/move/commands/else_moves_if_doesnt.move:4:30
  │
4 │     let y = if (true) 0 else move x; y;
  │                              ^^^^^^ attempted to move here
5 │     assert!(x == 0, 42);
  │             ------ used here
